<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingEnd="20dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@mipmap/logo" />

    <TextView
        style="@style/tv_header_bold"
        android:layout_marginTop="50dp"
        android:text="@string/forgot_pass" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/tv_reg"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:text="@string/with_email"
        android:textColor="@color/grey_hint" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/tv_reg"
        android:layout_marginStart="5dp"
        android:layout_marginTop="38dp"
        android:text="@string/email_id" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        style="@style/et_reg"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corners_grey"
        android:hint="@string/email_id"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:padding="8dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        style="@style/tv_reg"
        android:layout_width="match_parent"
        android:layout_marginTop="35dp"
        android:background="@mipmap/btn"
        android:text="@string/send" />

</LinearLayout>