<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/image_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryCard"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvDate"
                style="@style/tv_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@color/white"
                android:ellipsize="end"
                android:textSize="@dimen/font_12"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/tvEvent"
                style="@style/tv_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:maxLines="1"
                android:ellipsize="end"
                android:textSize="@dimen/font_14"
                android:layout_margin="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tvEventSpeaker"
                style="@style/tv_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speakers"
                android:textColor="@color/white"
                android:ellipsize="end"
                android:textSize="@dimen/font_18"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEvent"/>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/speakerImageRecyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/comm_padding_5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEventSpeaker"/>


            <Button
                android:id="@+id/btcheckin"
                android:layout_width="80dp"
                android:layout_height="30dp"
                style="@style/button"
                android:textSize="12dp"
                android:textAllCaps="false"
                android:text="@string/checkIn"
                android:layout_margin="10dp"
                android:background="@mipmap/btn"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speakerImageRecyclerview"/>


            <TextView
                android:id="@+id/tvNodata"
                style="@style/tv_reg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:textColor="@color/white"
                android:ellipsize="end"
                android:textSize="@dimen/font_18"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>